test/expected/explain_ipi-redef.out
explain int x, *x
               ^
16: error: "x": redefinition with different type
declare x as int
